// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "Options": Object {
    "onOpenSearchForm": [Function],
  },
  "html": "
<nav class=\\"navbar navbar-expand-lg fixed-top\\">
  <div class=\\"container-fluid\\">
    <div class=\\"logo\\">
      <a href=\\"/\\">
        <img src=\\"/images/logo-dark.png\\" alt=\\"logo\\">
      </a>
    </div>
    <!--0-->
    <div class=\\"collapse navbar-collapse\\">
      <ul class=\\"navbar-nav ml-auto mr-auto\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link \\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link active\\" href=\\"/\\">Contact</a>
        </li>
      </ul>
    </div>
    <div class=\\"navbar-right ml-auto\\">
      <div class=\\"theme-switch-wrapper\\">
        <label class=\\"theme-switch\\" for=\\"checkbox\\">
          <input type=\\"checkbox\\" id=\\"checkbox\\">
          <div class=\\"slider round\\"></div>
        </label>
      </div>
      <!--1-->
      <div class=\\"search-icon\\">
        <i class=\\"icon-search\\"></i>
      </div>
      <button class=\\"navbar-toggler\\" type=\\"button\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\"><span class=\\"navbar-toggler-icon\\"></span></button>
    </div>
  </div>
</nav>
",
}
`;

exports[`toggle navbar 1`] = `
Object {
  "Options": Object {
    "onOpenSearchForm": [Function],
  },
  "html": "
<nav class=\\"navbar navbar-expand-lg fixed-top\\">
  <div class=\\"container-fluid\\">
    <div class=\\"logo\\">
      <a href=\\"/\\">
        <img src=\\"/images/logo-dark.png\\" alt=\\"logo\\">
      </a>
    </div>
    <!--0-->
    <div class=\\"collapse navbar-collapse show\\" style=\\"max-height: 0px;\\">
      <ul class=\\"navbar-nav ml-auto mr-auto\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link \\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link active\\" href=\\"/\\">Contact</a>
        </li>
      </ul>
    </div>
    <div class=\\"navbar-right ml-auto\\">
      <div class=\\"theme-switch-wrapper\\">
        <label class=\\"theme-switch\\" for=\\"checkbox\\">
          <input type=\\"checkbox\\" id=\\"checkbox\\">
          <div class=\\"slider round\\"></div>
        </label>
      </div>
      <!--1-->
      <div class=\\"search-icon\\">
        <i class=\\"icon-search\\"></i>
      </div>
      <button class=\\"navbar-toggler\\" type=\\"button\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\"><span class=\\"navbar-toggler-icon\\"></span></button>
    </div>
  </div>
</nav>
",
}
`;

exports[`toggle navbar 2`] = `
Object {
  "Options": Object {
    "onOpenSearchForm": [Function],
  },
  "html": "
<nav class=\\"navbar navbar-expand-lg fixed-top\\">
  <div class=\\"container-fluid\\">
    <div class=\\"logo\\">
      <a href=\\"/\\">
        <img src=\\"/images/logo-dark.png\\" alt=\\"logo\\">
      </a>
    </div>
    <!--0-->
    <div class=\\"collapse navbar-collapse\\" style=\\"\\">
      <ul class=\\"navbar-nav ml-auto mr-auto\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link \\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link active\\" href=\\"/\\">Contact</a>
        </li>
      </ul>
    </div>
    <div class=\\"navbar-right ml-auto\\">
      <div class=\\"theme-switch-wrapper\\">
        <label class=\\"theme-switch\\" for=\\"checkbox\\">
          <input type=\\"checkbox\\" id=\\"checkbox\\">
          <div class=\\"slider round\\"></div>
        </label>
      </div>
      <!--1-->
      <div class=\\"search-icon\\">
        <i class=\\"icon-search\\"></i>
      </div>
      <button class=\\"navbar-toggler\\" type=\\"button\\" aria-expanded=\\"false\\" aria-label=\\"Toggle navigation\\"><span class=\\"navbar-toggler-icon\\"></span></button>
    </div>
  </div>
</nav>
",
}
`;
